<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home_id"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_nearby_id"
            android:icon="@drawable/nearby"
            android:title="@string/nearby" />

        <item
            android:id="@+id/nav_favourite_id"
            android:icon="@drawable/favourite"
            android:title="@string/favourite" />

        <item
            android:id="@+id/nav_contact_us_id"
            android:icon="@drawable/contact"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_share_app_id"
            android:icon="@drawable/share"
            android:title="@string/share_app" />

        <item
            android:id="@+id/nav_settings_id"
            android:icon="@drawable/setting"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_FAQ_id"
            android:icon="@drawable/faq"
            android:title="@string/faq" />

        <item
            android:id="@+id/nav_exit_id"
            android:icon="@drawable/close"
            android:title="@string/exit" />

    </group>

</menu>