<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="100dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/header_image"
        android:src="@drawable/navigation_drawer_ic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_directory"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_local_guide"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/grey" />

</LinearLayout>