<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/choose_your_language"
            android:textSize="25dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/english"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_french"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/french"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_arabic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/arabic"
        android:textSize="20sp" />

</LinearLayout>