<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/poppins_extra_light"
                    android:text="@string/find_a_nearest_place"
                    android:textSize="15sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:padding="5dp"
                            android:textAlignment="viewStart"
                            android:textAppearance="@font/poppins_thin"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/search" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_heading"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcViewFacility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

                <TextView
                    style="@style/main_heading"
                    android:text="@string/featured" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcViewFeatured"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    style="@style/main_heading"
                    android:text="@string/restaurant" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcViewRestaurants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    style="@style/main_heading"
                    android:text="@string/hotels" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcViewHotels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>